--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_outward"
+    /> -->
   </head>
   <body>
     <!-- hero -->
@@ -240,6 +245,45 @@
             </div>
           </div>
         </div>
+        <div class="scroll-box">
+          <img src="images/section-1-1.png" class="scroll-image" />
+          <div class="scroll-box-title">
+            <div class="scroll-box-text-1">APPLE INTELLIGENCE ∆</div>
+            <div class="scroll-box-text-2">iPhone 16 Pro</div>
+            <div class="scroll-box-text-3">
+              From $999 or $41.62/mo. for 24 mo.*
+            </div>
+          </div>
+        </div>
+        <div class="scroll-box">
+          <img src="images/section-1-2.png" class="scroll-image" />
+          <div class="scroll-box-title">
+            <div class="scroll-box-text-2-1">Apple Watch Series 10</div>
+            <div class="scroll-box-text-3">
+              From $399 or $33.25/mo. for 12 mo.
+            </div>
+          </div>
+        </div>
+        <div class="scroll-box">
+          <img src="images/section-1-3.png" class="scroll-image" />
+          <div class="scroll-box-title">
+            <div class="scroll-box-text-1">APPLE INTELLIGENCE ∆</div>
+            <div class="scroll-box-text-2">iPad mini</div>
+            <div class="scroll-box-text-3">
+              From $499 or $41.58/mo. for 12 mo.
+            </div>
+          </div>
+        </div>
+        <div class="scroll-box">
+          <img src="images/section-1-4.jpg" class="scroll-image" />
+          <div class="scroll-box-title">
+            <div class="scroll-box-text-1">APPLE INTELLIGENCE ∆</div>
+            <div class="scroll-box-text-2">MacBook Pro</div>
+            <div class="scroll-box-text-3">
+              From $1599 or $133.25/mo. for 12 mo.
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- end of scroll-1 -->
@@ -254,6 +298,51 @@
         <div class="scroll-box-2">
           <img src="images/section-2-1.png" class="scroll-image" />
           <div class="scroll-box-2-text-2">Make their gift one of a kind.</div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-2-2.png" class="scroll-product-image" />
+          <img src="images/airpods-colors.png" class="airpods-colors" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">Free Engraving</div>
+            <div class="scroll-product-text-2">AirPods Max - Purple</div>
+            <div class="scroll-product-text-3">$549.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-2-3.png" class="scroll-product-image" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">Free Engraving</div>
+            <div class="scroll-product-text-2">AirPods Pro 2</div>
+            <div class="scroll-product-text-3">$249.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-2-4.png" class="scroll-product-image" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">Free Engraving</div>
+            <div class="scroll-product-text-2-1">
+              AirPods 4 with Active Noise Cancellation
+            </div>
+            <div class="scroll-product-text-3">$179.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-2-5.png" class="scroll-product-image" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">New</div>
+            <div class="scroll-product-text-2">Apple Pencil Pro</div>
+            <div class="scroll-product-text-3">$49.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-2-6.jpg" class="scroll-product-image" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">Free Engraving</div>
+            <div class="scroll-product-text-2-1">
+              AirPods 4 with Active Noise Cancellation
+            </div>
+            <div class="scroll-product-text-3">$179.00</div>
+          </div>
         </div>
         <div class="scroll-box-product">
           <img src="images/section-2-2.png" class="scroll-product-image" />
@@ -368,6 +457,57 @@
             <div class="scroll-product-text-3">$79.00</div>
           </div>
         </div>
+        <div class="scroll-box-product">
+          <img src="images/section-3-2.png" class="scroll-product-image" />
+          <img src="images/iphone-colors.png" class="airpods-colors" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">New</div>
+            <div class="scroll-product-text-2-1">
+              iPhone 16 Silicone Case with MagSafe - Star Fruit
+            </div>
+            <div class="scroll-product-text-3">$49.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-3-3.png" class="scroll-product-image" />
+          <img src="images/homepod-colors.png" class="airpods-colors" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-2">HomePod mini - White</div>
+            <div class="scroll-product-text-3">$99.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-3-4.png" class="scroll-product-image" />
+          <img src="images/folio-colors.png" class="airpods-colors" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-2-1">
+              New Smart Folio for iPad Air 11 - inch (M2) - Sage
+            </div>
+            <div class="scroll-product-text-3">$79.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-3-5.png" class="scroll-product-image" />
+          <img src="images/headphones-colors.png" class="airpods-colors" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">New</div>
+            <div class="scroll-product-text-2-2">
+              Beats Solo 4 - On-Ear Wireless Headphones - Slate Blue
+            </div>
+            <div class="scroll-product-text-3">$79.00</div>
+          </div>
+        </div>
+        <div class="scroll-box-product">
+          <img src="images/section-3-6.jpg" class="scroll-product-image" />
+          <img src="images/headphones-colors.png" class="airpods-colors" />
+          <div class="scroll-product-title">
+            <div class="scroll-product-text-1">New</div>
+            <div class="scroll-product-text-2-2">
+              Beats Solo 4 - On-Ear Wireless Headphones - Slate Blue
+            </div>
+            <div class="scroll-product-text-3">$79.00</div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- end of scroll-3 -->
@@ -387,20 +527,270 @@
       </div>
       <div>
         <div class="scroll-box-small">
-          Customize your Mac and create your own style of Apple Watch.
+          <div class="scroll-box-content">
+            Customize your Mac and create your own style of Apple Watch.
+          </div>
         </div>
-        <div class="scroll-box-small"></div>
+        <div class="scroll-box-small">
+          <div class="scroll-box-content-1">
+            Pay in full or pay over time. Your choice.
+          </div>
+        </div>
       </div>
       <div>
-        <div class="scroll-box-small"></div>
-        <div class="scroll-box-small"></div>
+        <div class="scroll-box-small">
+          <div class="scroll-box-content">
+            Free extended returns between now and 1/8/25.
+          </div>
+        </div>
+        <div class="scroll-box-small">
+          <div class="scroll-box-content-1">
+            Make them yours. Engrave a mix of emoji, names, and numbers for
+            free.
+          </div>
+        </div>
       </div>
       <div class="scroll-box">
         <img src="images/section-4-2.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-text">APPLE TRADE IN</div>
+        <div class="scroll-4-box-1-text">
+          Trade in your current device. Get credit toward a new one.³
+        </div>
       </div>
       <div class="scroll-box">
         <img src="images/section-4-3.jpg" class="scroll-box-image-3" />
+        <div class="scroll-4-box-text">APPLE SPECIALIST</div>
+        <div class="scroll-4-box-1-text">
+          Find gifts with an Apple Specialist in a store or online.
+        </div>
+      </div>
+      <div class="scroll-box">
+        <img src="images/section-4-1.png" class="scroll-box-image-1" />
+        <div class="scroll-box-1-text">
+          Get gifts in time for the holidays with two hour delivery,² free
+          delivery,or easy pickup.
+        </div>
+      </div>
+      <div>
+        <div class="scroll-box-small">
+          <div class="scroll-box-content">
+            Customize your Mac and create your own style of Apple Watch.
+          </div>
+        </div>
+        <div class="scroll-box-small">
+          <div class="scroll-box-content-1">
+            Pay in full or pay over time. Your choice.
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="scroll-box-small">
+          <div class="scroll-box-content">
+            Free extended returns between now and 1/8/25.
+          </div>
+        </div>
+        <div class="scroll-box-small">
+          <div class="scroll-box-content-1">
+            Make them yours. Engrave a mix of emoji, names, and numbers for
+            free.
+          </div>
+        </div>
+      </div>
+      <div class="scroll-box">
+        <img src="images/section-4-2.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-text">APPLE TRADE IN</div>
+        <div class="scroll-4-box-1-text">
+          Trade in your current device. Get credit toward a new one.³
+        </div>
+      </div>
+      <div class="scroll-box">
+        <img src="images/section-4-3.jpg" class="scroll-box-image-3" />
+        <div class="scroll-4-box-text">APPLE SPECIALIST</div>
+        <div class="scroll-4-box-1-text">
+          Find gifts with an Apple Specialist in a store or online.
+        </div>
       </div>
     </div>
+    <!-- end of scroll-4 -->
+
+    <!-- scroll-5 -->
+    <div class="scroll-title">
+      <div class="gradient-text">The Apple Experience.</div>
+      <div class="scroll-text">Even more awe in store.</div>
+    </div>
+    <div class="scroll-5">
+      <div class="scroll-5-box">
+        <img src="images/section-5-1.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-text">APPLE MUSIC</div>
+        <div class="scroll-4-box-1-text">Get 3 months of Apple Music free.</div>
+        <div class="scroll-5-box-text">
+          Included with the purchase of select Apple devices.
+        </div>
+      </div>
+      <div class="scroll-5-box">
+        <img src="images/section-5-2.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-text-white">APPLE TV+</div>
+        <div class="scroll-4-box-1-text-white">
+          Get 3 months free when you buy an Apple device. ++
+        </div>
+      </div>
+      <div class="scroll-5-box">
+        <img src="images/section-5-3.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-1-text">
+          Six Apple services. One easy subscription.
+        </div>
+      </div>
+      <div class="scroll-5-box">
+        <img src="images/section-5-4.jpg" class="scroll-box-image-3" />
+        <div class="scroll-4-box-text">APPLE INTELLIGENCE</div>
+        <div class="scroll-4-box-1-text">
+          New features for writing, focus,communication, and more.
+        </div>
+      </div>
+      <div class="scroll-5-box">
+        <img src="images/section-5-1.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-text">APPLE MUSIC</div>
+        <div class="scroll-4-box-1-text">Get 3 months of Apple Music free.</div>
+        <div class="scroll-5-box-text">
+          Included with the purchase of select Apple devices.
+        </div>
+      </div>
+      <div class="scroll-5-box">
+        <img src="images/section-5-2.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-text-white">APPLE TV+</div>
+        <div class="scroll-4-box-1-text-white">
+          Get 3 months free when you buy an Apple device. ++
+        </div>
+      </div>
+      <div class="scroll-5-box">
+        <img src="images/section-5-3.png" class="scroll-box-image-2" />
+        <div class="scroll-4-box-1-text">
+          Six Apple services. One easy subscription.
+        </div>
+      </div>
+      <div class="scroll-5-box">
+        <img src="images/section-5-4.jpg" class="scroll-box-image-3" />
+        <div class="scroll-4-box-text">APPLE INTELLIGENCE</div>
+        <div class="scroll-4-box-1-text">
+          New features for writing, focus,communication, and more.
+        </div>
+      </div>
+    </div>
+    <!-- end of scroll-5 -->
+
+    <!-- scroll-6 -->
+    <div class="scroll-title">
+      <div class="gradient-text">Special Savings.</div>
+      <div class="scroll-text">
+        iPhone carrier deals and exclusive savings for school, businesses, and
+        more.
+      </div>
+    </div>
+    <div class="scroll-6">
+      <div class="scroll-6-box">
+        <img src="images/section-6-1.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">CARRIER DEALS</div>
+        <div class="scroll-4-box-1-text">
+          Apple. Your one‑stop shop for incredible carrier deals.
+        </div>
+        <div class="scroll-6-box-text">
+          Get up to $1000 in credit on a new iPhone with AT&T, Boost Mobile,
+          T‑Mobile, or Verizon. Trade‑in may be required.⁴
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-2.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">EDUCATION</div>
+        <div class="scroll-4-box-1-text">
+          Buy a new Mac or iPad with education savings.
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-3.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">CERTIFIED REFURBISHED</div>
+        <div class="scroll-4-box-1-text">
+          Shop refurbished Apple products backed by a one‑year warranty.
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-4.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">BUSINESS</div>
+        <div class="scroll-6-box-1-text">
+          From enterprise to small business, we’ll work with you.
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-5.jpg" class="scroll-6-image" />
+        <div class="scroll-4-box-text">GOVERNMENT</div>
+        <div class="scroll-4-box-1-text">
+          Special pricing is available for state, local, and federal agencies.
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-1.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">CARRIER DEALS</div>
+        <div class="scroll-4-box-1-text">
+          Apple. Your one‑stop shop for incredible carrier deals.
+        </div>
+        <div class="scroll-6-box-text">
+          Get up to $1000 in credit on a new iPhone with AT&T, Boost Mobile,
+          T‑Mobile, or Verizon. Trade‑in may be required.⁴
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-2.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">EDUCATION</div>
+        <div class="scroll-4-box-1-text">
+          Buy a new Mac or iPad with education savings.
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-3.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">CERTIFIED REFURBISHED</div>
+        <div class="scroll-4-box-1-text">
+          Shop refurbished Apple products backed by a one‑year warranty.
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-4.png" class="scroll-6-image" />
+        <div class="scroll-4-box-text">BUSINESS</div>
+        <div class="scroll-6-box-1-text">
+          From enterprise to small business, we’ll work with you.
+        </div>
+      </div>
+      <div class="scroll-6-box">
+        <img src="images/section-6-5.jpg" class="scroll-6-image" />
+        <div class="scroll-4-box-text">GOVERNMENT</div>
+        <div class="scroll-4-box-1-text">
+          Special pricing is available for state, local, and federal agencies.
+        </div>
+      </div>
+    </div>
+    <!-- end of scroll-6 -->
+
+    <!-- footer -->
+    <footer>
+      <div class="footer-title">Quick Links</div>
+      <div>
+        <button class="btn">
+          <a class="footer-link" href="#">Order Status</a>
+          <img src="images/arrow-outward.svg" class="footer-btn" />
+        </button>
+
+        <button class="btn">
+          <a class="footer-link" href="#">Shopping Help</a>
+          <img src="images/arrow-outward.svg" class="footer-btn" />
+        </button>
+        <button class="btn">
+          <a class="footer-link" href="#">Returns</a>
+          <img src="images/arrow-outward.svg" class="footer-btn" />
+        </button>
+        <button class="btn">
+          <a class="footer-link" href="#">Your Saves</a>
+          <img src="images/arrow-outward.svg" class="footer-btn" />
+        </button>
+      </div>
+    </footer>
+    <!-- end of footer -->
   </body>
 </html>
