--- a/index.html
+++ b/index.html
@@ -13,15 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-
-    <!-- <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_outward"
-    /> -->
   </head>
   <body>
-    <!-- hero -->
-    <!-- nav bar -->
+    <!-- HERO -->
+    <!-- NAV BAR -->
     <header>
       <ul>
         <div class="logo">
@@ -110,15 +105,15 @@
         </div>
       </ul>
     </header>
-    <!-- end of nav bar -->
+    <!-- END OF NAV BAR -->
 
-    <!-- ad -->
+    <!-- AD -->
     <div class="ad">
       Pay monthly at 0% APR when you choose to check out with Apple Card Monthly
       Installments.
     </div>
     <img src="images/gradient-blur.png" class="gradient-blur" />
-    <!-- end of ad -->
+    <!-- END OF AD -->
 
     <!-- hero title -->
     <div class="hero-title-container">
@@ -773,21 +768,21 @@
       <div class="footer-title">Quick Links</div>
       <div>
         <button class="btn">
-          <a class="footer-link" href="#">Order Status</a>
-          <img src="images/arrow-outward.svg" class="footer-btn" />
+          <a class="button-link" href="#">Order Status</a>
+          <img src="images/arrow-outward.svg" class="footer-btn-icon" />
         </button>
 
         <button class="btn">
-          <a class="footer-link" href="#">Shopping Help</a>
-          <img src="images/arrow-outward.svg" class="footer-btn" />
+          <a class="button-link" href="#">Shopping Help</a>
+          <img src="images/arrow-outward.svg" class="footer-btn-icon" />
         </button>
         <button class="btn">
-          <a class="footer-link" href="#">Returns</a>
-          <img src="images/arrow-outward.svg" class="footer-btn" />
+          <a class="button-link" href="#">Returns</a>
+          <img src="images/arrow-outward.svg" class="footer-btn-icon" />
         </button>
         <button class="btn">
-          <a class="footer-link" href="#">Your Saves</a>
-          <img src="images/arrow-outward.svg" class="footer-btn" />
+          <a class="button-link" href="#">Your Saves</a>
+          <img src="images/arrow-outward.svg" class="footer-btn-icon" />
         </button>
       </div>
     </footer>
