--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <img src="images/gradient-blur.png" class="gradient-blur" />
     <!-- END OF AD -->
 
-    <!-- hero title -->
+    <!-- HERO TITLE -->
     <div class="hero-title-container">
       <div class="hero-title">
         <div class="gradient-text">Store.</div>
@@ -143,9 +143,9 @@
         </div>
       </div>
     </div>
-    <!-- end of hero title -->
+    <!-- END OF HERO TITLE -->
 
-    <!-- hero list -->
+    <!-- HERO LIST -->
     <div class="hero-list">
       <div class="hero-list-product">
         <img src="images/list-mac.png" />
@@ -192,9 +192,9 @@
         <div class="hero-list-product-name">Apple Gift Card</div>
       </div>
     </div>
-    <!-- end of hero list -->
+    <!-- END OF HERO LIST -->
 
-    <!-- scroll-1 -->
+    <!-- SCROLL-1 -->
     <div class="scroll-title">
       <div class="gradient-text">The latest.</div>
       <div class="scroll-text">Let them unwrap wonders.</div>
@@ -281,9 +281,9 @@
         </div>
       </div>
     </section>
-    <!-- end of scroll-1 -->
+    <!-- END OF SCROLL-1 -->
 
-    <!-- scroll-2 -->
+    <!-- SCROLL-2 -->
     <div class="scroll-title">
       <div class="gradient-text">Personalization.</div>
       <div class="scroll-text">Let them unwrap wonders.</div>
@@ -386,9 +386,9 @@
         </div>
       </div>
     </section>
-    <!-- end of scroll-2 -->
+    <!-- END OF SCROLL-2-->
 
-    <!-- scroll-3 -->
+    <!-- SCROLL-3 -->
     <div class="scroll-title">
       <div class="gradient-text">Holiday Picks.</div>
       <div class="scroll-text">Add more magic to the moment.</div>
@@ -505,9 +505,9 @@
         </div>
       </div>
     </section>
-    <!-- end of scroll-3 -->
+    <!-- END OF SCROLL-3 -->
 
-    <!-- scroll-4 -->
+    <!-- SCROLL-4 -->
     <div class="scroll-title">
       <div class="gradient-text">Only at Apple.</div>
       <div class="scroll-text">With you every step of the holiday</div>
@@ -606,9 +606,9 @@
         </div>
       </div>
     </div>
-    <!-- end of scroll-4 -->
+    <!-- END OF SCROLL-4 -->
 
-    <!-- scroll-5 -->
+    <!-- SCROLL-5 -->
     <div class="scroll-title">
       <div class="gradient-text">The Apple Experience.</div>
       <div class="scroll-text">Even more awe in store.</div>
@@ -671,9 +671,9 @@
         </div>
       </div>
     </div>
-    <!-- end of scroll-5 -->
+    <!-- END OF SCROLL-5 -->
 
-    <!-- scroll-6 -->
+    <!-- SCROLL-6 -->
     <div class="scroll-title">
       <div class="gradient-text">Special Savings.</div>
       <div class="scroll-text">
@@ -761,9 +761,9 @@
         </div>
       </div>
     </div>
-    <!-- end of scroll-6 -->
+    <!-- END OF SCROLL-6 -->
 
-    <!-- footer -->
+    <!-- FOOTER -->
     <footer>
       <div class="footer-title">Quick Links</div>
       <div>
@@ -786,6 +786,6 @@
         </button>
       </div>
     </footer>
-    <!-- end of footer -->
+    <!-- END OF FOOTER -->
   </body>
 </html>
