--- a/index.html
+++ b/index.html
@@ -16,96 +16,37 @@
   </head>
   <body>
     <!-- HERO -->
-    <!-- NAV BAR -->
+    <!-- HEADER -->
     <header>
-      <ul>
-        <div class="logo">
-          <img src="images/apple.png" />
-        </div>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Store</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Mac</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >iPad</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >iPhone</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Watch</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Vision</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Airpods</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >TV & Home</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Entertainment</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Accessories</a
-          >
-        </li>
-        <li>
-          <a
-            class="header-link"
-            href="https://pinecone-academy-fgmu.vercel.app/store.html"
-            >Support</a
-          >
-        </li>
-        <div class="menu-icon">
-          <img src="images/searchbutton.png" class="search-button" />
+      <a href="/" class="logo">
+        <img src="images/logo-apple.png" />
+      </a>
+      <nav class="menu">
+        <a href="#">Store</a>
+        <a href="#">Mac</a>
+        <a href="#">iPad</a>
+        <a href="#">iPhone</a>
+        <a href="#">Watch</a>
+        <a href="#">Vision</a>
+        <a href="#">Airpods</a>
+        <a href="#">TV & Home</a>
+        <a href="#">Entertainment</a>
+        <a href="#">Accessories</a>
+        <a href="#">Support</a>
+      </nav>
+      <div class="top-icons">
+        <button class="icon-btn">
+          <img src="images/searchbutton.png" />
+        </button>
+        <button class="icon-btn">
           <img src="images/Item.png" />
-        </div>
-      </ul>
+        </button>
+        <button class="icon-btn">
+          <img src="images/ButtonMenu.png" />
+        </button>
+      </div>
     </header>
-    <!-- END OF NAV BAR -->
+    <!-- END OF HEADER -->
 
     <!-- AD -->
     <div class="ad">
